--- a/src/main/resources/com/zenika/resanet/client/view/login/desktop/login.css
+++ b/src/main/resources/com/zenika/resanet/client/view/login/desktop/login.css
@@ -1,3 +1,22 @@
 @sprite .logo {
     gwt-image: "logo";
+    float: left;
+    margin-right: 20px;
+}
+
+.loginPanel {
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+}
+
+.button {
+    width: 120px;
+}
+
+.buttonPanel {
+    margin-left: auto;
+    margin-right: auto;
+    border-spacing: 10px;
 }
